[project]
name = "demo"
version = "0.1.0"
description = ""
authors = [
    {name = "techfs",email = "techfs@163.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "langchain[openai] (>=0.3.25,<0.4.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "celery (>=5.5.2,<6.0.0)",
    "redis (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
